# sisfunil-backend

./: Cargo.toml  LICENSE
migrations/2023-09-19-173901_create_tables/: down.sql  up.sql
src/: main.rs  types.rs
src/database/: mysql.rs  schema.rs  types.rs
src/dtos/: mod.rs
src/models/: category.rs  container.rs  group.rs  item.rs  itembox.rs  itemtype.rs  kind.rs  location.rs
src/repositories/: categories.rs  containers.rs  groups.rs  items.rs  kinds.rs  locations.rs
src/web/: error.rs  filter.rs  items.rs  pageable.rs  router.rs  types.rs
